added some css to the page.

--- a/index.html
+++ b/index.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Amir Hamza</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My first web page</title>
+    <style>
+        html{
+            font-size: 22px;    
+            
+            font-family: sans-serif;
+            font-weight: 300;}
+        body{
+            background-color: #333;
+            color: whitesmoke;
+            margin: 20;
+            padding: 20;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <h1>head1</h1>
-        <h2>head2</h2>
-        <h3>head</h3>
-        <h4>head</h4>
-        <h5>head</h5>
-    </div>
-    <div>
-        <p>My name is amir Hamza</p>
-        <p>hello world</p>
-    </div>
-    <div><p>Unordered list</p>
-        <ul>
-            <li>Hello</li>
-            <li>Hello</li>
-            <li>Hello</li>
-        </ul>
-    </div>
-    <div>
-        <p>Ordered list</p>
-        <ol>
-            <li>Hello</li>
-            <li>Hello</li>
-            <li>Hello</li>
-        </ol>
-    </div>
-    <span>i am a span</span>
-    <hr>
-    <img src="index.jpeg" alt="Background image">
+    <p>Hello World</p>
+    <p>This is my first web page</p>
+
 </body>
 </html>
